--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "lint": "eslint src/. test/. --config .eslintrc.json --ext .ts --fix",
     "dev": "ts-node-dev --no-notify src/",
-    "start": "yarn run compile && node lib/",
+    "start": "node lib/",
     "jest": "jest --forceExit",
     "compile": "shx rm -rf lib/ && tsc"
   },
@@ -45,6 +45,7 @@
     "chance": "^1.1.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "feathers-hooks-common": "^6.1.4",
     "feathers-mongoose": "^8.5.1",
     "feathers-permissions": "^2.1.4",
