--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/backdoor-casino
-            git pull origin master
+            git pull origin main
             cd packages/api
             yarn install --frozen-lockfile
             yarn compile
