--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nft-casino/admin",
+  "name": "@backdoor-casino/admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
