--- a/packages/truffle/package.json
+++ b/packages/truffle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nft-casino/truffle",
+  "name": "@backdoor-casino/truffle",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
