--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            source ~/.bashrc
             nvm use 16
             cd ~/backdoor-casino
             git pull origin main
@@ -37,6 +38,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            source ~/.bashrc
             nvm use 16
             cd ~/backdoor-casino/packages/frontend
             yarn install --frozen-lockfile
@@ -49,6 +51,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            source ~/.bashrc
             nvm use 16
             cd ~/backdoor-casino/packages/admin
             yarn install --frozen-lockfile
