--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,13 @@ jobs:
       - name: Build API
         uses: appleboy/ssh-action@master
         env:
-          CONTRACT_OWNER_ADDRESS: ${{ secrets.CONTRACT_OWNER_ADDRESS }}
-          CONTRACT_OWNER_PK: ${{ secrets.CONTRACT_OWNER_PK }}
-          MONGODB_URL: ${{ secrets.MONGODB_URL }}
           NODE_ENV: production
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
+          run: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             nvm use 16
@@ -30,7 +27,7 @@ jobs:
             cd packages/api
             yarn install --frozen-lockfile
             yarn compile
-            CONTRACT_OWNER_ADDRESS=${{ env.CONTRACT_OWNER_ADDRESS }} CONTRACT_OWNER_PK=${{ env.CONTRACT_OWNER_PK }} MONGODB_URL=${{ env.MONGODB_URL }} pm2 start
+            CONTRACT_OWNER_ADDRESS=${{ secrets.CONTRACT_OWNER_ADDRESS }} CONTRACT_OWNER_PK=${{ secrets.CONTRACT_OWNER_PK }} MONGODB_URL=${{ secrets.MONGODB_URL }} pm2 start
       - name: Build frontend
         uses: appleboy/ssh-action@master
         with:
@@ -38,7 +35,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
+          run: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             nvm use 16
@@ -52,7 +49,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
+          run: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             nvm use 16
