--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -2,4 +2,4 @@ VITE_COLLECTION_ADDRESS=0x6443906Bf780753522C4C5c5eaFB5f9905CF069d
 VITE_PAYMENTS_ADDRESS=0x6443906Bf780753522C4C5c5eaFB5f9905CF069d
 VITE_WIDTHDRAW_ADDRESS=0x6443906Bf780753522C4C5c5eaFB5f9905CF069d
 VITE_INFURA_PROJECT_ID=f2dcf486c36142adb2a4228a2f315815
-VITE_API_URL=http://185.200.242.35:3010
+VITE_API_URL=https://api.backdoorcasino.xyz
