--- a/packages/truffle/package.json
+++ b/packages/truffle/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "ganache": "node ganache.js"
+  },
   "devDependencies": {
     "bip39": "^3.0.4",
     "dotenv": "^16.0.1",
     "eth-gas-reporter": "^0.2.25",
     "ethereumjs-wallet": "^1.0.2",
+    "ganache": "^7.4.0",
     "truffle-assertions": "^0.9.2",
     "truffle-plugin-verify": "^0.5.26"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.0.12",
     "@openzeppelin/contracts": "^4.7.2",
+    "@truffle/hdwallet-provider": "^2.0.12",
     "erc721a": "^4.2.0",
     "web3": "^1.7.4"
   }
