--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,13 @@ jobs:
           CONTRACT_OWNER_PK: ${{ secrets.CONTRACT_OWNER_PK }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
           NODE_ENV: production
+          NODE_APP_INSTANCE: 1
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: CONTRACT_OWNER_ADDRESS,CONTRACT_OWNER_PK,MONGODB_URL,NODE_ENV
+          envs: CONTRACT_OWNER_ADDRESS,CONTRACT_OWNER_PK,MONGODB_URL,NODE_ENV,NODE_APP_INSTANCE
           script: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
