--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,6 @@ jobs:
           ETH_NETWORK: ${{ secrets.ETH_NETWORK }}
           INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
           NODE_ENV: production
-          NODE_APP_INSTANCE: 1
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -38,7 +37,7 @@ jobs:
             pm2 stop api
             yarn install --frozen-lockfile
             yarn compile
-            CONTRACT_OWNER_ADDRESS=$CONTRACT_OWNER_ADDRESS CONTRACT_OWNER_PK=$CONTRACT_OWNER_PK COLLECTION_CONTRACT_ADDRESS=$COLLECTION_CONTRACT_ADDRESS PAYMENT_CONTRACT_ADDRESS=$PAYMENT_CONTRACT_ADDRESS WITHDRAW_CONTRACT_ADDRESS=$WITHDRAW_CONTRACT_ADDRESS MONGODB_URL=$MONGODB_URL ETH_NETWORK=$ETH_NETWORK INFURA_PROJECT_ID=$INFURA_PROJECT_ID NODE_ENV=$NODE_ENV NODE_APP_INSTANCE=$NODE_APP_INSTANCE pm2 restart api --update-env
+            CONTRACT_OWNER_ADDRESS=$CONTRACT_OWNER_ADDRESS CONTRACT_OWNER_PK=$CONTRACT_OWNER_PK COLLECTION_CONTRACT_ADDRESS=$COLLECTION_CONTRACT_ADDRESS PAYMENT_CONTRACT_ADDRESS=$PAYMENT_CONTRACT_ADDRESS WITHDRAW_CONTRACT_ADDRESS=$WITHDRAW_CONTRACT_ADDRESS MONGODB_URL=$MONGODB_URL ETH_NETWORK=$ETH_NETWORK INFURA_PROJECT_ID=$INFURA_PROJECT_ID NODE_ENV=$NODE_ENV pm2 restart api --update-env
       - name: Build frontend
         uses: appleboy/ssh-action@master
         with:
