--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.21",
     "mongodb-core": "^3.2.7",
     "mongoose": "^6.3.6",
+    "mongoose-lean-virtuals": "^0.9.1",
     "serve-favicon": "^2.5.0",
     "web3": "^1.7.4",
     "winston": "^3.0.0"
