Remove withdraw contract

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ jobs:
           CONTRACT_OWNER_PK: ${{ secrets.CONTRACT_OWNER_PK }}
           COLLECTION_CONTRACT_ADDRESS: ${{ secrets.COLLECTION_CONTRACT_ADDRESS }}
           PAYMENT_CONTRACT_ADDRESS: ${{ secrets.PAYMENT_CONTRACT_ADDRESS }}
-          WITHDRAW_CONTRACT_ADDRESS: ${{ secrets.WITHDRAW_CONTRACT_ADDRESS }}
           MONGODB_URL: ${{ secrets.MONGODB_URL }}
           ETH_NETWORK: ${{ secrets.ETH_NETWORK }}
           INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
@@ -26,7 +25,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          envs: CONTRACT_OWNER_ADDRESS,CONTRACT_OWNER_PK,COLLECTION_CONTRACT_ADDRESS,PAYMENT_CONTRACT_ADDRESS,WITHDRAW_CONTRACT_ADDRESS,MONGODB_URL,ETH_NETWORK,INFURA_PROJECT_ID,NODE_ENV,NODE_APP_INSTANCE
+          envs: CONTRACT_OWNER_ADDRESS,CONTRACT_OWNER_PK,COLLECTION_CONTRACT_ADDRESS,PAYMENT_CONTRACT_ADDRESS,MONGODB_URL,ETH_NETWORK,INFURA_PROJECT_ID,NODE_ENV,NODE_APP_INSTANCE
           script: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
@@ -37,7 +36,7 @@ jobs:
             pm2 stop api
             yarn install --frozen-lockfile
             yarn compile
-            CONTRACT_OWNER_ADDRESS=$CONTRACT_OWNER_ADDRESS CONTRACT_OWNER_PK=$CONTRACT_OWNER_PK COLLECTION_CONTRACT_ADDRESS=$COLLECTION_CONTRACT_ADDRESS PAYMENT_CONTRACT_ADDRESS=$PAYMENT_CONTRACT_ADDRESS WITHDRAW_CONTRACT_ADDRESS=$WITHDRAW_CONTRACT_ADDRESS MONGODB_URL=$MONGODB_URL ETH_NETWORK=$ETH_NETWORK INFURA_PROJECT_ID=$INFURA_PROJECT_ID NODE_ENV=$NODE_ENV pm2 restart api --update-env
+            CONTRACT_OWNER_ADDRESS=$CONTRACT_OWNER_ADDRESS CONTRACT_OWNER_PK=$CONTRACT_OWNER_PK COLLECTION_CONTRACT_ADDRESS=$COLLECTION_CONTRACT_ADDRESS PAYMENT_CONTRACT_ADDRESS=$PAYMENT_CONTRACT_ADDRESS MONGODB_URL=$MONGODB_URL ETH_NETWORK=$ETH_NETWORK INFURA_PROJECT_ID=$INFURA_PROJECT_ID NODE_ENV=$NODE_ENV pm2 restart api --update-env
       - name: Build frontend
         uses: appleboy/ssh-action@master
         with:
