--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
     "@feathersjs/authentication-client": "^4.5.15",
     "@feathersjs/feathers": "^4.5.15",
     "@feathersjs/rest-client": "^4.5.15",
+    "@lottiefiles/lottie-player": "^1.5.7",
     "@types/lodash": "^4.14.182",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
